Update /market/user-orders path
